--- a/main.html
+++ b/main.html
@@ -15,21 +15,65 @@
 </head>
 <body>
 
+        <h1 class="first">Alichi</h1>
+        <hr>
+        <h1 class="second">Ifeanyichukwu <small> Efaayin</small></h1>
+        <hr>
+        <h1 class="third">Udeagha</h1>
 
-    <h1 class="first">Alichi</h1>
-    <hr>
-    <h1 class="second">Ifeanyichukwu <small> Efaayin</small></h1>
-    <hr>
-    <h1 class="third">Udeagha</h1>
+        
+        <br>
+        <br>
 
-    
-    <br>
-    <br>
+        <h6>Web Developer <KBD><code>&lsaquo;HTML&rsaquo; | {CSS} | <code class="let">let for</code>JAVASCRIPT<code class="let">if else</code></code></KBD></h6>
+        <h6>Your Dry Jokes Plug</h6>
+        <h6>All Round Good Guy</h6>
 
-    <h6>Web Developer <KBD><code>&lsaquo;HTML&rsaquo; | {CSS} | <code class="let">let for</code>JAVASCRIPT<code class="let">if else</code></code></KBD></h6>
-    <h6>Your Dry Jokes Plug</h6>
-    <h6>All Round Good Guy</h6>
+        <div class="pills">
+            <div class="pilly">
+                <button><a href="#">Projects</a></button>
+            </div>
+            <div class="pilly">
+                <button><a href="#">Humor For Great Minds Only</a></button>
+                <br>
+
+                <ol>
+                    <li>What do you call a lion that practices law?
+                        <ul>
+                            <li>Answer: Agu-ne-chamber</li>
+                        </ul>
+                    </li>
+                    <br>
+
+                    <li>Why does a tree never get to its destination?
+                        <ul>
+                            <li>Answer: It "branches" a lot</li>
+                        </ul>
+                    </li>
+                    <br>
+
+                    <li>What do you call a piss taken in Kano state (in Nigeria)?
+                        <ul>
+                            <li>Answer: Canopy (Kano pee)</li>
+                        </ul>
+                    </li>
+                    <br>
+
+                    <p>For more premium content, follow the link</p>
+                </ol>
+            </div>
+            <button class="pilly"><a href="#">Let's Talk Business</a></button>
+        </div>
 
 
+
+
+
+
+        <!-- <div class="pills">
+            <button class="pilly"><a href="#">Projects</a></button>
+            <button class="pilly"><a href="#">Humor For Great Minds Only</a></button>
+            <button class="pilly"><a href="#">Let's Talk Business</a></button>
+        </div> -->
 </body>
 </html>
